--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-jacob.dll
-jacob.jar
-jacobdll.jar
-*.zip
-RELEASE.txt
-.project
-.cproject
-.classpath
+out/
+build/
+.gradle/
+.idea/
 compilation_tools.properties
-version.properties
-release
-.externalToolBuilders
-.cdtproject
-foo.foo
-foo.ser
-JacobVersion.properties
-.settings
-setenv.sh
-junit*properties
-~$*
+*.asc
